--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </li>
             <li>
               <strong>Website:</strong>
-              <span>www.kardswebsite.com</span>
+              <span>https://parassareen4.github.io/my-portofolio/ </span>
             </li>
             <li>
               <strong>Email:</strong>
